--- a/src/templates/documentation/styles.scss
+++ b/src/templates/documentation/styles.scss
@@ -1,8 +1,20 @@
 .docs-template {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 200px auto;
 }
 .docs-navigation {
-  flex-basis: 10rem;
-  background: #ccc;
+  background: #f2f2f2;
+  padding: 25px;
+}
+.docs-content {
+  padding: 25px;
+}
+
+@media screen and (max-width: 40em) {
+  .docs-template {
+    grid-template-columns: auto;
+  }
+  .docs-navigation {
+    // display: none;
+  }
 }
