--- a/src/templates/documentation/styles.scss
+++ b/src/templates/documentation/styles.scss
@@ -1,8 +1,15 @@
 .docs-template {
   display: grid;
-  grid-template-columns: 240px auto;
+  grid-template-rows: 80px auto;
+  height: 100%;
+}
+.docs-container {
+  grid-column: 1 / -1;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
 }
 .docs-navigation {
+  grid-column: 1 / 3;
   background: #f2f2f2;
   padding: 25px;
   .docs-nav-heading {
@@ -16,6 +23,7 @@
 }
 
 .docs-content {
+  grid-column: 3 / -1;
   padding: 25px;
   .docs-content-wrapper {
     max-width: 740px;
@@ -26,10 +34,10 @@
 }
 
 @media screen and (max-width: 40em) {
-  .docs-template {
-    grid-template-columns: auto;
-  }
   .docs-navigation {
-    // display: none;
+    grid-column: 1 / -1;
+  }
+  .docs-content {
+    grid-column: 1 / -1;
   }
 }
