--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,13 +1,12 @@
 .header {
   background: rebeccapurple;
-  grid-column: 1 / -1;
   display: flex;
   padding-left: 25px;
   align-items: center;
-  height: 100%;
 }
 .header-nav {
   padding: 25px;
+  font-size: 16px;
 }
 .title {
   margin: 0 0 0 10px;
@@ -16,8 +15,9 @@
   font-weight: 200;
   display: inline-block;
 }
-.nav-logo {
-  max-width: 120px;
+.header-logo {
+  width: 120px;
+  padding: 0;
   margin: 0;
   display: inline-block;
 }
