--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -628,18 +628,15 @@ pre tt:after {
 
 // Custom CSS
 .container {
+  background: #311752;
   display: grid;
   height: 100%;
   grid-template-rows: auto 60px;
+  color: #fff;
 }
 .footer {
-  background: #222;
+  background:#1E0C36;
   display: flex;
   padding: 25px;
   align-items: center;
-  p {
-    font-size: 11px;
-    color: #999;
-    margin: 0;
-  }
 }
