--- a/src/templates/documentation/styles.scss
+++ b/src/templates/documentation/styles.scss
@@ -2,13 +2,16 @@
   display: grid;
   grid-template-rows: 80px auto;
   grid-template-columns: repeat(24, 1fr);
+  color: #222;
+  background: #fff;
+  font-family: 'Rubik', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .docs-navigation {
   grid-column: 1 / 5;
   background: #f2f2f2;
   padding: 25px;
   .docs-nav-heading {
-    font-weight: 600;
+    font-weight: 500;
     font-size: 16px;
   }
   ul {
