--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -17,7 +17,7 @@
 .matrix-mockup-image {
   max-width: 600px;
   width: 100%;
-  margin-bottom: 0;
+  margin: auto;
 }
 .wrapper {
   padding-top: 3rem;
